fixed prediction with user id